--- a/src/pages/sign-in/style.scss
+++ b/src/pages/sign-in/style.scss
@@ -41,3 +41,29 @@
     max-width: 100%;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .sign-in {
+    height: auto;
+    
+    &__left-side {
+      width: 100%;
+      padding: 0 20px;
+    }
+
+    &__right-side {
+      display: none;
+    }
+
+    &__form-wrapper {
+      justify-content: flex-start;
+      margin-top: 98px;
+    }
+
+    &__sign-up-message {
+      position: relative;
+      bottom: 0;
+      margin-top: 20px;
+    }
+  }
+}
