--- a/src/components/audience-option/style.scss
+++ b/src/components/audience-option/style.scss
@@ -41,6 +41,7 @@
     background-color: #fff;
     border-radius: 50%;
     border: 1px solid #B3B9C2;
+    flex-shrink: 0;
 
     &::after {
       content: '';
