--- a/src/components/creative-step/style.scss
+++ b/src/components/creative-step/style.scss
@@ -17,9 +17,14 @@
     justify-content: center;
     flex-direction: column;
     padding: 30px;
+    box-sizing: border-box;
   }
+}
 
-  &__dropzone {
-    height: 198px;
+@media only screen and (max-width: 768px) {
+  .creative-step {
+    &__wrapper {
+      width: 100%;
+    }
   }
 }
