--- a/src/components/dropzone/style.scss
+++ b/src/components/dropzone/style.scss
@@ -1,5 +1,6 @@
 .dropzone {
-  height: 100%;
+  height: 192px;
+  width: 100%;
   border: 1px dashed #B2B9C3;
   display: flex;
   flex-direction: column;
@@ -22,10 +23,12 @@
     font-size: 12px;
     line-height: 14px;
     color: #B3B9C2;
+    text-align: center;
   }
 }
 
 .dropped-files-screen {
+  width: 100%;
   &__add {
     display: block;
     margin-left: auto;
