--- a/src/components/form/audience/style.scss
+++ b/src/components/form/audience/style.scss
@@ -2,12 +2,14 @@
   display: flex;
   margin-bottom: 42px;
 
-  &__icon {
-    display: block;
+  &__icon-wrapper {
     padding: 14px;
     margin-right: 21px;
     background-color: #6c63ff;
     border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__title {
@@ -28,3 +30,53 @@
 .audience-options {
   margin-bottom: 30px;
 }
+
+.audience {
+  width: 496px;
+
+  .form {
+    padding: 30px 0;
+
+    .item {
+      width: auto;
+      padding: 0 30px;
+    }
+  }
+
+  .audience-header {
+    padding: 0 30px;
+  }
+
+  .dropzone {
+    height: 198px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .audience {
+    width: 100%;
+
+    .form {
+      padding: 20px 0;
+    }
+
+    .audience-header {
+      align-items: center;
+      margin-bottom: 20px;
+      padding: 0 20px;
+  
+      &__icon-wrapper {
+        height: 44px;
+        width: 44px;
+        flex-shrink: 0;
+        padding: 0;
+        margin-right: 16px;
+      }
+    }
+
+    .item {
+      padding: 0 20px;
+    }
+  } 
+}
+
